--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -37,7 +37,7 @@ jobs:
           at: ./artifacts
       - aws-s3/sync:
           from: ./artifacts/bin
-          to: "s3://downloads.okteto.com/cloud/cli"
+          to: "s3://downloads.okteto.com/cli"
           aws-access-key-id: AWS_ACCESS_KEY_ID
           aws-secret-access-key: AWS_SECRET_ACCESS_KEY
           aws-region: AWS_REGION
@@ -48,7 +48,7 @@ jobs:
             --exclude "*.*.*/" \
       - aws-s3/sync:
           from: ./artifacts/bin
-          to: "s3://downloads.okteto.com/cloud/cli/${CIRCLE_TAG}"
+          to: "s3://downloads.okteto.com/cli/${CIRCLE_TAG}"
           aws-access-key-id: AWS_ACCESS_KEY_ID
           aws-secret-access-key: AWS_SECRET_ACCESS_KEY
           aws-region: AWS_REGION
@@ -57,7 +57,26 @@ jobs:
             --metadata version=${CIRCLE_TAG} \
             --cache-control "max-age=86400" \
           overwrite: false
-            
+      - aws-s3/copy:
+          from: "./artifacts/bin/okteto-Darwin-x86_64"
+          to: "s3://downloads.okteto.com/cloud/cli/okteto-Darwin-x86_64"
+          aws-access-key-id: AWS_ACCESS_KEY_ID
+          aws-secret-access-key: AWS_SECRET_ACCESS_KEY
+          aws-region: AWS_REGION
+          arguments: |
+            --acl public-read \
+            --metadata version=${CIRCLE_TAG} \
+            --cache-control "max-age=86400"
+      - aws-s3/copy:
+          from: "./artifacts/bin/okteto-Darwin-x86_64"
+          to: "s3://downloads.okteto.com/cli/okteto-darwin-amd64"
+          aws-access-key-id: AWS_ACCESS_KEY_ID
+          aws-secret-access-key: AWS_SECRET_ACCESS_KEY
+          aws-region: AWS_REGION
+          arguments: |
+            --acl public-read \
+            --metadata version=${CIRCLE_TAG} \
+            --cache-control "max-age=86400"
   build-api:
     docker:
       - image: circleci/golang:1.12
