--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,7 +26,7 @@ jobs:
   
   mock-publish-github-release:
     docker:
-      - image: cibuilds/github:0.10
+      - image: circleci/golang:1.12
     steps:
       - checkout
       - attach_workspace:
@@ -35,7 +35,7 @@ jobs:
           name: "Update brew formula"
           command: |
             sha=$(cat ./artifacts/bin/okteto-Darwin-x86_64.sha256 | awk '{print $1}')
-            bash ./update_homebrew_formula.sh 0.0.1 $GITHUB_TOKEN $sha 1
+            sh ./update_homebrew_formula.sh 0.0.1 $GITHUB_TOKEN $sha 1
 
   release:
     docker:
