--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,7 +35,7 @@ jobs:
           name: "Update brew formula"
           command: |
             sha=$(cat ./artifacts/bin/okteto-Darwin-x86_64.sha256 | awk '{print $1}')
-            sh ./update_homebrew_formula.sh 0.0.1 $GITHUB_TOKEN $sha 1
+            bash ./update_homebrew_formula.sh 0.0.1 $GITHUB_TOKEN $sha 1
 
   release:
     docker:
@@ -95,7 +95,7 @@ jobs:
           name: "Update brew formula"
           command: |
             sha=$(cat ./artifacts/bin/okteto-Darwin-x86_64.sha256 | awk '{print $1}')
-            ./update_homebrew_formula.sh $CIRCLE_TAG $GITHUB_TOKEN $sha 0
+            bash ./update_homebrew_formula.sh $CIRCLE_TAG $GITHUB_TOKEN $sha 0
 
 workflows:
   version: 2
