--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -38,6 +38,7 @@ jobs:
           command: |
             export OKTETO_USER=cindylopez
             export OKTETO_PATH=$(pwd)/artifacts/bin/okteto-Linux-x86_64
+            mkdir -p $HOME/.okteto
             touch $HOME/.okteto/.noanalytics
             make integration
       - save_cache:
@@ -130,7 +131,9 @@ workflows:
             - build
           filters:
             branches:
-              only: master
+              only: 
+                - master
+                - bugfix/fix-integration-test
       - mock-publish-github-release:
           requires:
             - build
