check latest version from file not header

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,6 +12,7 @@ jobs:
             - v1-pkg-cache
       - run: make test
       - run: env VERSION_STRING=$CIRCLE_TAG make -j 3 build-all
+      - run: env VERSION_STRING=$CIRCLE_TAG make latest
       - persist_to_workspace:
           root: .
           paths:
