--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -71,16 +71,8 @@ jobs:
           echo $GCLOUD_SERVICE_KEY | gcloud auth activate-service-account --key-file=-
           gcloud --quiet config set project ${GOOGLE_PROJECT_ID}
           gcloud --quiet config set compute/zone ${GOOGLE_COMPUTE_ZONE}
-          
-          gsutil -m -h x-goog-meta-version:${TAG} rsync ./artifacts/bin gs://downloads.okteto.com/cli/${CIRCLE_TAG}
-          
-          echo "${TAG}" > latest
-          gsutil -m -h x-goog-meta-version:${TAG} rsync ./artifacts/bin gs://downloads.okteto.com/cli
-        
-          
-          # legacy
-          gsutil -h x-goog-meta-version:${TAG} cp ./artifacts/bin/okteto-Darwin-x86_64 gs://downloads.okteto.com/cli/okteto-Darwin-x86_64
-          gsutil -h x-goog-meta-version:${TAG} cp ./artifacts/bin/okteto-Darwin-x86_64 gs://downloads.okteto.com/cli/cli/okteto-darwin-amd64
+          gsutil -m rsync ./artifacts/bin gs://downloads.okteto.com/cli/${CIRCLE_TAG}
+          gsutil -m rsync ./artifacts/bin gs://downloads.okteto.com/cli
       - run:
           name: "Publish Release on GitHub"
           command: |
@@ -101,7 +93,7 @@ jobs:
           echo $GCLOUD_SERVICE_KEY | gcloud auth activate-service-account --key-file=-
           gcloud --quiet config set project ${GOOGLE_PROJECT_ID}
           gcloud --quiet config set compute/zone ${GOOGLE_COMPUTE_ZONE}
-          gsutil -h x-goog-meta-version:${CIRCLE_SHA1} -m rsync -r ./artifacts/bin gs://downloads.okteto.com/cli/master
+          gsutil -m rsync -r ./artifacts/bin gs://downloads.okteto.com/cli/master
 workflows:
   version: 2
   build-release:
