trigger the integration job if branch finishes with 'integration'

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -154,6 +154,7 @@ workflows:
             branches:
               only: 
                 - master
+                - /.*(integration)/
       - release-master:
           requires:
             - integration
