--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -46,10 +46,14 @@ jobs:
             chmod +x /usr/local/bin/kubectl
             cp $(pwd)/artifacts/bin/okteto-Linux-x86_64 /usr/local/bin/okteto
       - run: 
-          name: integration tests (clientside)
-          environment:
-            OKTETO_CLIENTSIDE_TRANSLATION: "true"
+          name: integration tests (serverside)
           command: |
+            unset OKTETO_CLIENTSIDE_TRANSLATION
+            make integration
+      - run: 
+          name: integration tests (clientside)
+          command: |
+            export OKTETO_CLIENTSIDE_TRANSLATION=true
             make integration
       - save_cache:
           key: v2-pkg-cache
