include code coverage

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,7 +10,11 @@ jobs:
       - restore_cache: 
           keys:
             - v2-pkg-cache
-      - run: make test
+      - run: 
+          name: test
+          command: |
+            make test
+            bash <(curl -s https://codecov.io/bash)
       - run: env VERSION_STRING=$CIRCLE_TAG make -j 3 build-all
       - run: env VERSION_STRING=$CIRCLE_TAG make latest
       - persist_to_workspace:
