--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,6 +28,9 @@ jobs:
       - store_artifacts:
           path: bin
           destination: binaries
+      - store_artifacts:
+          path: coverage.txt
+          destination: coverage.txt
   integration:
     environment: 
       OKTETO_USER: cindylopez
