--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,7 +10,11 @@ jobs:
       - restore_cache: 
           keys:
             - v2-pkg-cache
-      - run: make test
+      - run: 
+          name: test
+          command: |
+            make test
+            bash <(curl -s https://codecov.io/bash)
       - run: env VERSION_STRING=$CIRCLE_TAG make -j 3 build-all
       - run: env VERSION_STRING=$CIRCLE_TAG make latest
       - persist_to_workspace:
@@ -24,6 +28,9 @@ jobs:
       - store_artifacts:
           path: bin
           destination: binaries
+      - store_artifacts:
+          path: coverage.txt
+          destination: coverage.txt
   integration:
     environment: 
       OKTETO_USER: cindylopez
