--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,7 @@
 version: 2.1
 orbs:
   aws-s3: circleci/aws-s3@1.0.6
+  win: circleci/windows@1.0.0
 jobs:
   build:
     docker:
@@ -81,7 +82,11 @@ jobs:
           command: |
             sha=$(cat ./artifacts/bin/okteto-Darwin-x86_64.sha256 | awk '{print $1}')
             bash ./update_homebrew_formula.sh 0.0.1 $GITHUB_TOKEN $sha 1
-
+  test-win:
+    executor: win/vs2019
+    steps: 
+      - checkout
+      - run: go test ./...
   release:
     docker:
       - image: circleci/golang:1.13
@@ -193,4 +198,8 @@ workflows:
               only: /^\d+\.\d+\.\d+$/
             branches:
               ignore: /.*/
-      
+      - test-win:
+          filters:
+            branches:
+              only: 
+                - /.*(windows)/  
