add /go/pkg to the circle cache

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,7 +9,7 @@ jobs:
       - checkout
       - restore_cache: 
           keys:
-            - v2-pkg-cache
+            - v2-pkg-cache-{{ checksum "go.sum" }}
       - run: 
           name: test
           command: |
@@ -22,9 +22,10 @@ jobs:
           paths:
             - bin
       - save_cache:
-          key: v2-pkg-cache
+          key: v2-pkg-cache-{{ checksum "go.sum" }}
           paths:
             - ~/.cache/go-build
+            - /go/pkg
       - store_artifacts:
           path: bin
           destination: binaries
@@ -40,7 +41,7 @@ jobs:
       - checkout
       - restore_cache: 
           keys:
-            - v2-pkg-cache
+            - v2-pkg-cache-{{ checksum "go.sum" }}
       - attach_workspace:
           at: ./artifacts
       - run:
@@ -63,9 +64,10 @@ jobs:
             export OKTETO_CLIENTSIDE_TRANSLATION=true
             make integration
       - save_cache:
-          key: v2-pkg-cache
+          key: v2-pkg-cache-{{ checksum "go.sum" }}
           paths:
             - ~/.cache/go-build
+            - /go/pkg
       - store_artifacts:
           path: /root/.okteto
           
