--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -84,7 +84,7 @@ jobs:
           command: |
             sha=$(cat ./artifacts/bin/okteto-Darwin-x86_64.sha256 | awk '{print $1}')
             bash ./update_homebrew_formula.sh 0.0.1 $GITHUB_TOKEN $sha 1
-  test-win:
+  windows-unit:
     executor: win/vs2019
     steps: 
       - checkout
@@ -209,8 +209,9 @@ workflows:
               only: /^\d+\.\d+\.\d+$/
             branches:
               ignore: /.*/
-      - test-win:
+      - windows-unit:
           filters:
             branches:
               only: 
-                - /.*(windows)/  
+                - master
+                - /.*(windows)/
