--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -90,16 +90,16 @@ jobs:
       - checkout
       - restore_cache: 
           keys:
-            - v3-pkg-cache-windows-{{ checksum "go.sum" }}
+            - v4-pkg-cache-windows-{{ checksum "go.sum" }}
       - run: 
           name: test
           command: |
             go version
             go test ./...
       - save_cache:
-          key: v3-pkg-cache-windows-{{ checksum "go.sum" }}
+          key: v4-pkg-cache-windows-{{ checksum "go.sum" }}
           paths:
-            - C:\Users\circleci\.cache\go-build
+            - C:\Users\circleci\AppData\Local\go-build
             - C:\Users\circleci\go\pkg
             - C:\Go\pkg
       
