--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -71,8 +71,7 @@ jobs:
             - ~/.cache/go-build
             - /go/pkg
       - store_artifacts:
-          path: /root/.okteto
-          
+          path: /root/.okteto        
   mock-publish-github-release:
     docker:
       - image: circleci/golang:1.13
@@ -86,6 +85,8 @@ jobs:
             sha=$(cat ./artifacts/bin/okteto-Darwin-x86_64.sha256 | awk '{print $1}')
             bash ./update_homebrew_formula.sh 0.0.1 $GITHUB_TOKEN $sha 1
   windows-unit:
+    environment: 
+      OKTETO_USER: cindylopez
     executor: win/default
     steps: 
       - checkout
@@ -100,6 +101,40 @@ jobs:
           command: |
             go version
             go test ./...
+      - save_cache:
+          key: v4-pkg-cache-windows-{{ checksum "go.sum" }}
+          paths:
+            - C:\Users\circleci\AppData\Local\go-build
+            - C:\Users\circleci\go\pkg
+            - C:\Go\pkg
+  windows-integration:
+    executor: win/default
+    steps: 
+      - checkout
+      - restore_cache: 
+          keys:
+            - v4-pkg-cache-windows-{{ checksum "go.sum" }}
+      - run: 
+          name: upgrade golang
+          command: choco upgrade golang
+      - run: 
+          name: upgrade kubectl
+          command: choco install kubernetes-cli
+      - attach_workspace:
+          at: .\artifacts
+      - run:
+          name: prepare env
+          command: |
+            new-item $HOME\.okteto -itemtype "directory"
+            new-item $HOME\.okteto\.noanalytics -itemtype "file" -value "noanalytics"
+            copy-item ".\artifacts\bin\okteto.exe" -Destination "C:\Windows\system32\okteto.exe"
+            C:\Windows\system32\okteto.exe login --token ${API_TOKEN}
+      - run: 
+          name: test
+          environment: 
+            OKTETO_PATH: 'C:\Windows\system32\okteto.exe'
+          command: |
+            go test github.com/okteto/okteto/integration -tags=integration --count=1 -v
       - save_cache:
           key: v4-pkg-cache-windows-{{ checksum "go.sum" }}
           paths:
@@ -204,3 +239,9 @@ workflows:
               only: 
                 - master
                 - /.*(windows)/
+      - windows-integration:
+          filters:
+            branches:
+              only: 
+                - master
+                - /.*(windows).*(e2e)/
