--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -171,7 +171,9 @@ jobs:
           name: "Update brew formula"
           command: |
             sha=$(cat ./artifacts/bin/okteto-Darwin-x86_64.sha256 | awk '{print $1}')
-            bash ./update_homebrew_formula.sh $CIRCLE_TAG $GITHUB_TOKEN $sha 0
+            ./update_homebrew_formula.sh $CIRCLE_TAG $GITHUB_TOKEN $sha 0
+            pushd homebrew-cli
+            git push https://${GITHUB_TOKEN}@github.com/okteto/homebrew-okteto.git master
   release-master:
     docker:
       - image: circleci/golang:1.14
