--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -85,7 +85,7 @@ jobs:
           name: "Update brew formula"
           command: |
             sha=$(cat ./artifacts/bin/okteto-Darwin-x86_64.sha256 | awk '{print $1}')
-            ./update_homebrew_formula.sh 0.0.1 $GITHUB_TOKEN $sha
+            ./update_homebrew_formula.sh 0.0.1 $sha
   windows-unit:
     environment: 
       OKTETO_USER: cindylopez
@@ -171,7 +171,7 @@ jobs:
           name: "Update brew formula"
           command: |
             sha=$(cat ./artifacts/bin/okteto-Darwin-x86_64.sha256 | awk '{print $1}')
-            ./update_homebrew_formula.sh $CIRCLE_TAG $GITHUB_TOKEN $sha 0
+            ./update_homebrew_formula.sh $CIRCLE_TAG $sha
             pushd homebrew-cli
             git push https://${GITHUB_TOKEN}@github.com/okteto/homebrew-okteto.git master
   release-master:
