--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -86,53 +86,53 @@ jobs:
           command: |
             sha=$(cat ./artifacts/bin/okteto-Darwin-x86_64.sha256 | awk '{print $1}')
             ./update_homebrew_formula.sh 0.0.1 $sha
-  # windows-unit:
-  #   environment: 
-  #     OKTETO_USER: cindylopez
-  #   executor: win/default
-  #   steps: 
-  #     - checkout
-  #     - restore_cache: 
-  #         keys:
-  #           - v4-pkg-cache-windows-{{ checksum "go.sum" }}
-  #     - run: 
-  #         name: upgrade golang
-  #         command: choco upgrade golang
-  #     - run: 
-  #         name: test
-  #         command: |
-  #           go version
-  #           go test ./...
-  #     - run: 
-  #         name: upgrade kubectl
-  #         command: choco install kubernetes-cli
-  #     - attach_workspace:
-  #         at: .\artifacts
-  #     - run:
-  #         name: prepare env
-  #         command: |
-  #           new-item $HOME\.okteto -itemtype "directory" -force
-  #           new-item $HOME\.okteto\.noanalytics -itemtype "file" -value "noanalytics" -force
-  #           & 'C:\Users\circleci\project\artifacts\bin\okteto.exe' login --token $env:API_TOKEN
-  #     - run: 
-  #         name: integration tests (serverside)
-  #         environment: 
-  #           OKTETO_PATH: 'C:\Users\circleci\project\artifacts\bin\okteto.exe'
-  #         command: |
-  #           go test github.com/okteto/okteto/integration -tags=integration --count=1 -v
-  #     - run: 
-  #         name: integration tests (clientside)
-  #         environment: 
-  #           OKTETO_PATH: 'C:\Users\circleci\project\artifacts\bin\okteto.exe'
-  #           OKTETO_CLIENTSIDE_TRANSLATION: 'true'
-  #         command: |
-  #           go test github.com/okteto/okteto/integration -tags=integration --count=1 -v
-  #     - save_cache:
-  #         key: v4-pkg-cache-windows-{{ checksum "go.sum" }}
-  #         paths:
-  #           - C:\Users\circleci\AppData\Local\go-build
-  #           - C:\Users\circleci\go\pkg
-  #           - C:\Go\pkg
+  windows-unit:
+    environment: 
+      OKTETO_USER: cindylopez
+    executor: win/default
+    steps: 
+      - checkout
+      - restore_cache: 
+          keys:
+            - v4-pkg-cache-windows-{{ checksum "go.sum" }}
+      - run: 
+          name: upgrade golang
+          command: choco upgrade golang
+      - run: 
+          name: test
+          command: |
+            go version
+            go test ./...
+      - run: 
+          name: upgrade kubectl
+          command: choco install kubernetes-cli
+      - attach_workspace:
+          at: .\artifacts
+      - run:
+          name: prepare env
+          command: |
+            new-item $HOME\.okteto -itemtype "directory" -force
+            new-item $HOME\.okteto\.noanalytics -itemtype "file" -value "noanalytics" -force
+            & 'C:\Users\circleci\project\artifacts\bin\okteto.exe' login --token $env:API_TOKEN
+      - run: 
+          name: integration tests (serverside)
+          environment: 
+            OKTETO_PATH: 'C:\Users\circleci\project\artifacts\bin\okteto.exe'
+          command: |
+            go test github.com/okteto/okteto/integration -tags=integration --count=1 -v
+      - run: 
+          name: integration tests (clientside)
+          environment: 
+            OKTETO_PATH: 'C:\Users\circleci\project\artifacts\bin\okteto.exe'
+            OKTETO_CLIENTSIDE_TRANSLATION: 'true'
+          command: |
+            go test github.com/okteto/okteto/integration -tags=integration --count=1 -v
+      - save_cache:
+          key: v4-pkg-cache-windows-{{ checksum "go.sum" }}
+          paths:
+            - C:\Users\circleci\AppData\Local\go-build
+            - C:\Users\circleci\go\pkg
+            - C:\Go\pkg
   release:
     docker:
       - image: circleci/golang:1.14
@@ -226,11 +226,11 @@ workflows:
               only: /^\d+\.\d+\.\d+$/
             branches:
               ignore: /.*/
-      # - windows-unit:
-      #     requires:
-      #       - build
-      #     filters:
-      #       branches:
-      #         only: 
-      #           - master
-      #           - /.*(windows)/
+      - windows-unit:
+          requires:
+            - build
+          filters:
+            branches:
+              only: 
+                - master
+                - /.*(windows)/
