--- a/okteto.yml
+++ b/okteto.yml
@@ -1,6 +1,8 @@
 name: cli
 image: okteto/golang:1
 command: [ "bash" ]
+persistentVolume:
+  enabled: true
 volumes:
   - /go/pkg/
   - /root/.cache/go-build/
