Add CI job to build dockerfile on release (#913)
* CI job to build the docker image

Signed-off-by: Ramiro Berrelleza <rberrelleza@gmail.com>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -162,6 +162,13 @@ jobs:
             --metadata version=${CIRCLE_TAG} \
             --cache-control "max-age=86400" \
           overwrite: false
+      - setup_remote_docker
+      - run:  
+          name: "Publish Docker container"
+          command: |
+            echo "$DOCKER_PASS" | docker login --username $DOCKER_USER --password-stdin
+            docker build -t okteto/okteto:${CIRCLE_TAG} --build-arg VERSION_STRING=$CIRCLE_TAG .
+            docker push okteto/okteto:${CIRCLE_TAG}
       - run:
           name: "Publish Release on GitHub"
           command: |
@@ -179,6 +186,13 @@ jobs:
       - image: circleci/golang:1.14
     steps:
       - checkout
+      - setup_remote_docker
+      - run:  
+          name: "Publish Docker container"
+          command: |
+            echo "$DOCKER_PASS" | docker login --username $DOCKER_USER --password-stdin
+            docker build -t okteto/okteto:latest --build-arg VERSION_STRING=$CIRCLE_SHA1 .
+            docker push okteto/okteto:latest
       - attach_workspace:
           at: ./artifacts
       - aws-s3/sync:
