--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -166,6 +166,7 @@ jobs:
       - run:  
           name: "Publish Docker container"
           command: |
+            export DOCKER_BUILDKIT=1
             echo "$DOCKER_PASS" | docker login --username $DOCKER_USER --password-stdin
             docker build -t okteto/okteto:${CIRCLE_TAG} --build-arg VERSION_STRING=$CIRCLE_TAG .
             docker push okteto/okteto:${CIRCLE_TAG}
@@ -190,6 +191,7 @@ jobs:
       - run:  
           name: "Publish Docker container"
           command: |
+            export DOCKER_BUILDKIT=1
             echo "$DOCKER_PASS" | docker login --username $DOCKER_USER --password-stdin
             docker build -t okteto/okteto:latest --build-arg VERSION_STRING=$CIRCLE_SHA1 .
             docker push okteto/okteto:latest
