Fix docker build (#915)
* enable buildkit
* set docker engine version

Signed-off-by: Ramiro Berrelleza <rberrelleza@gmail.com>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -162,10 +162,12 @@ jobs:
             --metadata version=${CIRCLE_TAG} \
             --cache-control "max-age=86400" \
           overwrite: false
-      - setup_remote_docker
+      - setup_remote_docker:
+          version: "19.03.8"
       - run:  
           name: "Publish Docker container"
           command: |
+            export DOCKER_BUILDKIT=1
             echo "$DOCKER_PASS" | docker login --username $DOCKER_USER --password-stdin
             docker build -t okteto/okteto:${CIRCLE_TAG} --build-arg VERSION_STRING=$CIRCLE_TAG .
             docker push okteto/okteto:${CIRCLE_TAG}
@@ -186,10 +188,12 @@ jobs:
       - image: circleci/golang:1.14
     steps:
       - checkout
-      - setup_remote_docker
+      - setup_remote_docker:
+          version: "19.03.8"
       - run:  
           name: "Publish Docker container"
           command: |
+            export DOCKER_BUILDKIT=1
             echo "$DOCKER_PASS" | docker login --username $DOCKER_USER --password-stdin
             docker build -t okteto/okteto:latest --build-arg VERSION_STRING=$CIRCLE_SHA1 .
             docker push okteto/okteto:latest
