--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -133,6 +133,8 @@ jobs:
             - C:\Users\circleci\AppData\Local\go-build
             - C:\Users\circleci\go\pkg
             - C:\Go\pkg
+      - store_artifacts:
+          path: C:\Users\circleci\.okteto
   release:
     docker:
       - image: circleci/golang:1.14
