env var to skip deleting folders
Signed-off-by: Ramiro Berrelleza <rberrelleza@gmail.com>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -125,6 +125,7 @@ jobs:
           environment: 
             OKTETO_PATH: 'C:\Users\circleci\project\artifacts\bin\okteto.exe'
             OKTETO_CLIENTSIDE_TRANSLATION: 'true'
+            OKTETO_SKIP_CLEANUP: 'true'
           command: |
             go test github.com/okteto/okteto/integration -tags=integration --count=1 -v
       - save_cache:
