set empty OKTETO_CLIENTSIDE_TRANSLATION
Signed-off-by: Ramiro Berrelleza <rberrelleza@gmail.com>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -121,6 +121,7 @@ jobs:
           environment: 
             OKTETO_PATH: 'C:\Users\circleci\project\artifacts\bin\okteto.exe'
             OKTETO_SKIP_CLEANUP: 'true'
+            OKTETO_CLIENTSIDE_TRANSLATION: ''
           command: |
             go test github.com/okteto/okteto/integration -tags=integration --count=1 -v
       - run: 
